--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,30 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-      <% include partials/head %>
-  </head>
-  <body class="container">
-    <div class="col-md-6 col-md-offset-3">
-      <h1>Hello <%= name %></h1>
-      <button class="btn btn-success" id="show-metrics">
-        Bring the metrics
-      </button>
-      <div id="metrics"></div>
-    </div>
-    <script>
-      $('#show-metrics').click((e) => {
-        e.preventDefault();
-        $.getJSON("/metrics/<%= name %>", {}, (data) => {
-          const content = data.map(d => {
-            return 'timestamp: '+d.timestamp+', value: '+d.value+'';
-          })
-          $('#metrics').append(content.join("\n"));
-        });
-      })
-    </script>
-    <button class="btn btn-danger" href="/logout" onClick='document.location.href="/logout"'>
-      Logout
+
+<head>
+  <% include partials/head %>
+</head>
+
+<body class="container">
+  <div class="col-md-6 col-md-offset-3">
+    <h1>Hello <%= name %></h1>
+    <form action="/metric" method="post">
+      <div id="form" >
+        <div class="form-group">
+          <label for="form_add_metric_quantity">Quantity of water (in glasses)</label>
+          <input id="form_add_metric_quantity" min="0" size="2" type="number" name="quantity" />
+        </div>
+        <div class="form-group">
+          <label for="form_add_metric_date">Date</label>
+          <input id="form_add_metric_dd" type="number" min="1" max="31" name="dd" placeholder="DD" />
+          <input id="form_add_metric_mm" type="number" min="1" max="12" name="mm" placeholder="MM" />
+          <input id="form_add_metric_yyyy" type="number" min="1970" max="2020" name="yyyy" placeholder="YYYY" />
+        </div>
+        <button class="btn btn-success" type="submit" value="Add">Add the metric</button>
+      </div>
+    </form>
+    <br><br><br>
+    <button class="btn btn-success" id="show-metrics">
+      Bring the metrics
     </button>
-  </body>
-  
+    <div id="metrics">
+        <% if(metrics){ %>
+          <hr />
+          <br>
+          <h4 style='color:rgb(62, 182, 26);'>Here are the metrics of <%= name %></h4>
+          <ul>
+              <% metrics.forEach(function(metrics){ %>
+                  <li style='color:#0004ff;'><%= metrics.date %> <%= metrics.value %>
+                    <button class="btn btn-outline-danger btn-sm" href="/metric/delete/<%= metrics.date %>" onClick='document.location.href="/metric/delete/<%= metrics.date %>"'>X</button></li>
+              <% });%>
+          </ul>
+      <% } %>
+    </div>
+  </div>
+  <!-- <script>
+    $('#show-metrics').click((e) => {
+      e.preventDefault();
+      $.getJSON("/metrics/<%= name %>", {}, (data) => {
+        const content = data.map(d => {
+          return 'timestamp: ' + d.timestamp + ', value: ' + d.value + '';
+        })
+        $('#metrics').append(content.join("\n"));
+      });
+    })
+  </script> -->
+  <br>
+  <button class="btn btn-danger" href="/logout" onClick='document.location.href="/logout"'>
+    Logout
+  </button>
+</body>
+
 </html>
