Minor changes + comments
Minor changes (in test & index) and comments

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,10 +42,11 @@
       <% } %>
 
     <br><br><br>
-    
+   
+    <!--
     <button class="btn btn-success" id="show-metrics">
       Bring the metrics
-    </button>
+    </button>-->
   
     <div id="metrics">
         <% if(metrics){ %>
