--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,10 +25,13 @@
         </div>
         <div class="form-group">
           <label for="form_add_metric_date">Date</label>
+          <input id="date" type="date" name="test" required/>
+          <!--
           <input id="form_add_metric_dd" type="number" min="1" max="31" name="dd" placeholder="DD" required />
           <input id="form_add_metric_mm" type="number" min="1" max="12" name="mm" placeholder="MM" required />
           <input id="form_add_metric_yyyy" type="number" min="1970" max="2020" name="yyyy" placeholder="YYYY"
             required />
+          -->
         </div>
         <button class="btn btn-success" type="submit" value="Add">Add the metric</button>
       </div>
@@ -61,7 +64,7 @@
       <h4 style='color:rgb(206, 163, 44);'>Here are the metrics of <%= name %></h4>
       <ul>
         <% metrics.forEach(function(metrics){ %>
-        <li style='color:#160e069f;'> Date : <%= metrics.date %> &nbsp; Quantity : <%= metrics.value %>
+        <li style='color:#160e069f;'> Date : <%= metrics.date %> (YYYY-MM-DD) &nbsp; Quantity : <%= metrics.value %>
           <button class="btn btn-danger btn-sm" href="/metric/delete/<%= metrics.date %>"
             onClick='document.location.href="/metric/delete/<%= metrics.date %>"'>X</button>
           <button class="btn btn-warning btn-sm" href="/metric/modify/<%= metrics.date %>"
