Populate add + readme update

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
         </div>
         <div class="form-group">
           <label for="form_add_metric_date">Date</label>
-          <input id="date" type="date" name="test" required/>
+          <input id="date" type="date" name="date" required/>
           <!--
           <input id="form_add_metric_dd" type="number" min="1" max="31" name="dd" placeholder="DD" required />
           <input id="form_add_metric_mm" type="number" min="1" max="12" name="mm" placeholder="MM" required />
