--- a/views/index.ejs
+++ b/views/index.ejs
@@ -94,7 +94,7 @@
               data: {
                   labels: labels,
                   datasets: [{
-                      label: 'Water drank',
+                      label: 'Quantity of water drunk',
                       data: value,
                       backgroundColor: [
                           'rgba(255, 99, 132, 0.2)',
