--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,4 +26,9 @@
             </button>
         </div>
     </body>
+    <footer>
+        <div class="card-footer text-muted">
+          Developped by Louis Cauquelin & Eloi Alardet &copy;All rights reserved
+        </div>
+      </footer>
 </html>
