--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -54,10 +54,10 @@
             <% } %>
               
         </div>
-
-       
-          
-        
-        
     </body>
+    <footer>
+        <div class="card-footer text-muted">
+          Developped by Louis Cauquelin & Eloi Alardet &copy;All rights reserved
+        </div>
+    </footer>
 </html>
