--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,5 +1,5 @@
 <meta charset="UTF-8">
-<title>ECE AST</title>
+<title>Node/DevOps Project</title>
 
 <link rel="stylesheet" href="/css/bootstrap.min.css">
 <style>
